--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
     <div class="short-url">
       <% if (locals.short_url) { %>
-      <a href="<%= short_url %>"><%= short_url %> </a>
+      <a href="<%= short_url %>">https://short-url-node-js.herokuapp.com<%= short_url %> </a>
       <% } %>
     </div>
   </body>
